[tool.poetry]
name = "drunk_detector"
version = "0.1.0"
description = ""
authors = ["2amazing4me <razvanmihai1337@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core", "isort", "black"]
build-backend = "poetry.core.masonry.api"
